--- a/vue-prerender/package.json
+++ b/vue-prerender/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "demo1",
+  "name": "vue-prerender",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "npm run build && node server.js"
   },
   "dependencies": {
     "core-js": "^3.6.5",
